# CS-Onboard

./: .gitignore  README.md
cmake_test/: CMakeLists.txt  test.cpp
src/onboard/: CMakeLists.txt  package.xml
src/onboard/src/: example_node.cpp
src/realsense/: CMakeLists.txt  package.xml
src/realsense/src/: motion_capture.cpp  tipping_node.cpp
